Filtered: Fix style issues when collapsing filters

--- a/formats/filtered/resources/css/ext.srf.filtered.value-filter.less
+++ b/formats/filtered/resources/css/ext.srf.filtered.value-filter.less
@@ -68,4 +68,8 @@
 			border: solid #777777 1px;
 		}
 	}
+
+	.select2-search__field {
+		width: 100% !important;
+	}
 }
